# Tasker

./: .gitignore  CMakeLists.txt  README.md
include/: install.h  list.h
src/: install.c  list.c  main.c  path.c
